# road_detect

./: .gitignore  AutoAdjust.cpp  AutoAdjust.h  AutoAdjust.hpp  CMakeLists.txt  LICENSE  LaneDetect.cpp  LaneDetect.h  LaneDetect.hpp  README.md  SignDetect.cpp  demo.cpp  main.cpp  mian.cpp  test1.cpp  test2.cpp
GUI/: mainwindow.cpp  mainwindow.h  ui_mainwindow.h
docs/: README.md
gui/: lanedetector.cpp  lanedetector.h  main.cpp  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
include/: AutoAdjust.cpp  LaneDetect.h  SignDetect.cpp  SignDetect.h
test/: LaneDetect.hpp  demo.cpp  test3.cpp  test4.cpp
